--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Frimi Bot</title>
+  <title>Cargills Bot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-
+    <link rel="icon" href="favicon.png">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
@@ -120,7 +120,7 @@
       font-family: "Poppins", sans-serif;
     }
     .chat-submit-button:hover{
-      background-color: #ff5001;
+      background-color: #ec1e28;
     }
 
     #questionForm {
@@ -156,7 +156,7 @@
       font-family: "Poppins", sans-serif;
       font-size: 12px;
       border-radius: 15px;
-      background-color: #ff5001;
+      background-color: #ec1e28;
       border: none;
       color: #fff;
       width: 100%;
@@ -212,7 +212,7 @@
 <body class="background">
   <div class="container my-0 p-0">
     <div class="d-flex chat-header w-100 py-2 text-center justify-content-between align-items-center">
-      <img src="../frimi-logo.png" alt="" class="px-3 py-2" style="height: 50px; width: auto">
+      <img src="../cargills-logo.png" alt="" class="px-3 py-2" style="height: 50px; width: auto">
       <!-- <button class="closeButton"><i class="bi bi-x-lg"></i></button> -->
     </div>
 
@@ -225,9 +225,9 @@
           <img class="message-image" src="/chat-header.webp">
           <div>
             <img src="../language-img.webp" alt="" class="px-3 py-2 mb-3 img-fluid">
-            <p class="mb-2">Hello, Welcome to Frimi. Please select the language to get started.</p>
-            <p class="mb-2">ආයුබෝවන්, Frimi වෙත ඔබව සාදරයෙන් පිළිගනිමු. කරුණාකර ආරම්භ කිරීමට භාෂාව තෝරන්න.</p>
-            <p class="mb-2">வணக்கம், Frimi வரவேற்கிறோம். தொடங்குவதற்கு மொழியைத் தேர்ந்தெடுக்கவும்.</p>
+            <p class="mb-2">Hello, Welcome to Cargills Bank. Please select the language to get started.</p>
+            <p class="mb-2">ආයුබෝවන්, Cargills බැංකුව වෙත ඔබව සාදරයෙන් පිළිගනිමු. කරුණාකර ආරම්භ කිරීමට භාෂාව තෝරන්න.</p>
+            <p class="mb-2">வணக்கம், Cargills வங்கிக்கு வரவேற்கிறோம். தொடங்குவதற்கு மொழியைத் தேர்ந்தெடுக்கவும்.</p>
             <span class="d-flex flex-row language-buttons w-100 p-0 m-0">
               <span class="col-4 pe-1">
                 <button id="changeToEnglishButton">English</button>
