--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -206,6 +206,33 @@
       padding: 0px;
 
     }
+
+    @keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes visible {
+  0% {
+    visibility: hidden;
+  }
+  100% {
+    visibility: visible;
+  }
+}
+
+.loading {
+  animation: fadeIn 0.5s ease-in-out infinite alternate, visible 0.5s ease-in-out infinite alternate;
+}
+
+
   </style>
 </head>
 
@@ -306,9 +333,10 @@
         // Disable input field
         questionInput.disabled = true;
 
-        // Change button icon to three dots
-        const submitButton = document.querySelector('.chat-submit-button');
-        submitButton.innerHTML = '<i class="bi bi-three-dots"></i>';
+        // Change button icon to three dots and add loading animation
+    const submitButton = document.querySelector('.chat-submit-button');
+    submitButton.innerHTML = '<i class="bi bi-three-dots loading"></i>';
+    // submitButton.classList.add('loading');
 
         let chatId = localStorage.getItem('chatId');
         console.log("generated chat id : ", chatId)
@@ -351,9 +379,10 @@
         // Enable input field
         questionInput.disabled = false;
 
-        // Change button icon back to send icon
-        const submitButton = document.querySelector('.chat-submit-button');
-        submitButton.innerHTML = '<i class="bi bi-send"></i>';
+        // Change button icon back to send icon and remove loading animation
+    const submitButton = document.querySelector('.chat-submit-button');
+    submitButton.innerHTML = '<i class="bi bi-send"></i>';
+    // submitButton.classList.remove('loading');
       }
     });
 
