--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -237,13 +237,14 @@
       animation: fadeIn 0.5s ease-in-out infinite alternate, visible 0.5s ease-in-out infinite alternate;
     }
     .typingmsg-wrapper{
-      background-color: #ec1e288a;
-      color: #fff;
+      background-color: #ec1e2836;
+      color: #000;
       border: none !important;
     }
     .typing-msg{
       color: #ec1e28;
       font-size: 25px;
+      padding: 5px !important;
     }
   </style>
 </head>
