update error message

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -236,14 +236,23 @@
     .loading {
       animation: fadeIn 0.5s ease-in-out infinite alternate, visible 0.5s ease-in-out infinite alternate;
     }
-    .typingmsg-wrapper{
+
+    .typingmsg-wrapper {
       background-color: #fff;
       color: #000;
     }
-    .typing-msg{
+
+    .typing-msg {
       color: #000;
       font-size: 25px;
       padding: 5px !important;
+    }
+    .error-message{
+      background-color: #ec1e289c;
+      color: #fff;
+      padding: 10px;
+      border-radius: 10px !important;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -315,6 +324,20 @@
       if (typingMessage) {
         typingMessage.remove();
       }
+    }
+
+
+    // Function to handle errors
+    function handleErrorMessage(error) {
+      const responseDiv = document.getElementById("response");
+      let errorMessage = "<p class='error-message'>The allocated number of tokens are over, please ask the administrator to add more tokens to the system.</p>"; // Default error message
+
+      // Check if the error message matches the specific error condition
+      if (error.message === "The allocated number of tokens are over, please ask the administrator to add more tokens to the system.") {
+        errorMessage = "<p>The allocated number of tokens are over, please ask the administrator to add more tokens to the system.</p>";
+      }
+
+      responseDiv.innerHTML = errorMessage;
     }
 
     // Function to append a message to the response div
@@ -414,12 +437,13 @@
         questionInput.value = '';
         submitButton.innerHTML = '<i class="bi bi-send"></i>'
         submitButton.disabled = false;
+        // handleErrorMessage(error);
 
 
       } catch (error) {
         console.error("Error submitting question:", error);
-        const responseDiv = document.getElementById("response");
-        responseDiv.innerHTML = "<p>An error occurred.</p>";
+        // Handle specific error message
+        handleErrorMessage(error);
       } finally {
         // Enable input field
         questionInput.disabled = false;
